# mkintywebsite

./: .dockerignore  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml  structure.md
docker/celery/: Dockerfile.dev  Dockerfile.prod
docker/django/: Dockerfile.dev  Dockerfile.prod
src/: .coverage  manage.py  mkdocs.yml
src/apps/authentication/api/: serializers.py  urls.py  views.py
src/apps/authentication/services/: auth_service.py
src/apps/authentication/templates/authentication/: register.html
src/apps/authentication/web/: forms.py  urls.py  views.py
src/apps/home/templates/home/: index.html
src/apps/home/web/: urls.py  views.py
src/apps/users/: admin.py  models.py
src/apps/users/api/: serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_bio_alter_user_first_name_and_more.py
src/apps/users/selectors/: user_selectors.py
src/apps/users/services/: user_service.py
src/apps/users/templates/users/: user_list.html
src/apps/users/tests/: test_api.py  test_models.py  test_selectors.py  test_services.py  test_views.py
src/apps/users/web/: urls.py  views.py
src/config/: asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  local.py  prod.py  production.py
src/docs/: api.md  architecture.md  index.md
src/static/css/: index.css
src/static/js/: htmx.js  main.js
src/staticfiles/css/: index.css
src/staticfiles/js/: htmx.js  main.js
src/templates/: footer.html  index.html  navbar.html
src/templates/includes/: footer.html  navbar.html
